--- a/theme/basico/css/estiloCuadrosMensaje.css
+++ b/theme/basico/css/estiloCuadrosMensaje.css
@@ -1,11 +1,12 @@
 .information, .success, .warning, .error, .validation, .message, .divTitulo, .validation2{
-    margin: 10px auto;
+    margin: 30px auto;
     border: 1px solid;
     padding:15px 15px 15px 50px;
     background-repeat: no-repeat;
     background-position: 10px 15px;
-    width:500px;
+    width:70%;
     font-family:"Arial",Helvetica, sans-serif;
+    font-size: 15px;
 }
 /*.info {
     color: #00529B;
@@ -29,7 +30,7 @@
 }
 .error {
     color: #D8000C;
-    background-color: #FFFFFF;
+    background-color: #FFB2B2;
     display:block;
     background-image: url("../img/knobs/cancel.png");
 }
@@ -48,12 +49,10 @@
 }
 
 .message{
-    border: 2px solid #61AA34;
-    color: #666666;
-    background-color: #FFFFFF;
-    display:block;
-    width:700px;
-    /*background-image: url("../img/knobs/add.png");*/
+    color: #00529B;
+    background-color: #BDE5F8;
+    background-image: url('../img/knobs/info.png');
+    
 }
 
 .divTitulo{    
