--- a/theme/basico/css/estiloTexto.css
+++ b/theme/basico/css/estiloTexto.css
@@ -32,7 +32,7 @@
 .textoSubtitulo
 {
     border-width: 0px;
-    font-size: 14;
+    font-size: 14px;
     font-family: "Arial", Verdana, Trebuchet MS, Helvetica, sans-serif;
     text-align: left; 
 }
@@ -40,7 +40,7 @@
 .textoElegante
 {
     border-width: 0px;
-    font-size: 14;
+    font-size: 14px;
     font-family: "Arial", Verdana, Trebuchet MS, Helvetica, sans-serif;
     text-align: left;
 }
@@ -54,7 +54,7 @@
 .textoTitulo
 {
     border-width: 0px;
-    font-size: 18;
+    font-size: 18px;
     font-family: "Arial", Verdana, Trebuchet MS, Helvetica, sans-serif;
     text-align: left;
     font-weight: bold;
@@ -64,7 +64,6 @@
 {
 	font-size: 10px;
 	font-family: "Arial";
-	text-align: center;
 }
 
 .textoPequenno
@@ -104,4 +103,8 @@
 .textoRojo
 {
     color: #FF0000;
+}
+
+.interlineadoPequenno{    
+    line-height:1em;
 }
