--- a/blocks/development/pie/css/estiloPie.css
+++ b/blocks/development/pie/css/estiloPie.css
@@ -9,23 +9,12 @@
 .footer {
     background:#EEEEEE;
     padding:10px 30px 0px 30px ;
-    border:0px;
-    border-collapse: collapse;
-    border-spacing: 0px;
-    border-color: #AAAAAA;
-    border-style: solid;
     
 }
 
 .footer_enlaces {
     padding:0px 30px 0px 30px ;
-    border:0px;
-    border-collapse: collapse;
-    border-spacing: 0px;
-    border-color: #CCCCCC;
-    border-style: solid;
     
-
 }
 
 .footer_lista {
@@ -43,10 +32,6 @@
     width:25%;
     margin: 0px 0px 0px 20px;
     padding:0px 0px 0px 0px ;
-    border:0px;
-    border-collapse: collapse;
-    border-spacing: 0px;
-    border-style: solid;
     
 
 }
@@ -60,6 +45,8 @@
     }
 
 .footer_mensajeLista a{
+	
+
  }
 
 
@@ -68,11 +55,6 @@
     padding:10px 30px 0px 0px ;
     font-size: 14px;
     font-family: "Arial", Verdana, Trebuchet MS, Helvetica, sans-serif;
-    border:0px;
-    border-collapse: collapse;
-    border-spacing: 0px;
-    border-color: #AAAAAA;
-    border-style: solid;
     
 }
 
@@ -89,10 +71,6 @@
 
 .footer_messages {
     padding:0px 30px 0px 30px ;
-    border:0px;
-    border-collapse: collapse;
-    border-spacing: 0px;
-    border-style: solid;
     background:#EEEEEE;
 }
 
@@ -101,7 +79,6 @@
     text-align:left;
     font:normal 11px Arial, Helvetica, sans-serif;
     margin:0 auto;
-    border-top:0px dashed #666;
     padding:20px 10px 0 10px;
     }
 
@@ -128,15 +105,22 @@
     
     }
 
-.footer_lista a{
+.footer_lista a:link{
+	text-decoration: none;
+	color:#555555;
+
  }
 
  .footer_lista a:visited{
+ 
+    text-decoration: none;
+    color:#555555;
  }
 
  .footer_lista a:hover{
     font-weight: bold;
     text-decoration: underline;
+    color:#555555;
  }
 
 .listaEncabezado{
